--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 python-server/.venv
 python-server/__pycache__
+python-server/integration/__pycache__
 react-client/package-lock.json
 react-client/node_modules
